<resources>
    // app name
    <string name="app_name">Vita In Line</string>
    // splash text
    <string name="splash_text">Vita in line</string>
    // sign in text
    <string name="sign_in_username_text">Login (Tug\'ilgan kun)</string>
    <string name="sign_in_username_hint">Loginni kiriting</string>
    <string name="sign_in_password_text">Parol (Passport seriya)</string>
    <string name="sign_in_password_hint">*******</string>
    <string name="sign_in_btn_text">Kirish</string>
    <string name="sign_in_title">Tizimga kirish</string>


    //sign up text
    <string name="sign_up_FLM">FISH</string>
    <string name="sign_up_FLM_hint">(Eshonov Fakhiyor Farhodbek o\'g\'li)</string>
    <string name="sign_up_birth_date_hint">Tug\'ilgan sana</string>
    <string name="sign_up_btn_text">Ro\'yxatdan o\'tish</string>
    <string name="calendar_text">  Tanlang</string>
    <string name="sign_up_description">Iltimos ro\’yxatdan o’tish uchun quyidagi maydonlarni to\’ldiring!</string>

    <string name="error_star">*</string>
    <string name="attention_login_text">Diqqat ushbu ma\'lumot, login sifatida ishlatilinadi!</string>
    <string name="sign_up_serial_text">Passport seriya va raqami</string>
    <string name="attention_password_text">Diqqat ushbu ma\'lumot parol sifatida ishlatiladi!</string>
    <string name="sign_up_serial_hint">(AA 2314658)</string>
    <string name="sign_up_region">Viloyat</string>
    <string name="sign_up_job_text">Ish joyingiz</string>
    <string name="sign_up_job_hint">(Ishsiz)</string>
    <string name="sign_up_number_text">Telifon raqamingiz</string>
    <string name="sign_up_phone_hint">+998 -- --- -- --</string>

    <string-array name="spinner_items">
        <item>uz</item>
        <item>ru</item>
    </string-array>

    <string-array name="spinner_items_ru">
        <item>ru</item>
        <item>uz</item>
    </string-array>

    <string-array name="spinner_region_items">
        <item>Toshkent</item>
        <item>Sirdaryo</item>
        <item>Andijon</item>
        <item>Farg\'ona</item>
        <item>Namangan</item>
        <item>Samarqand</item>
        <item>Qashqadaryo</item>
        <item>Surxandaryo</item>
        <item>Buxoro</item>
        <item>Navoiy</item>
        <item>Xorazm</item>
        <item>Qoraqalpog\'iston</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_hello_text">Salom!</string>
    <string name="dialog_extra_desc_title">Qo\'shimcha ma\'lumotlar</string>
    <string name="dialog_apply_text">Qo’llanish</string>
    <string name="dialog_apply_time">Qo’llanish soatlari</string>
    <string name="dialog_period_date">Qo’llanish muddati</string>
    <string name="davolanish_text">Davolanish</string>
    <string name="dorilar_text">Dorilar</string>
    <string name="cancel_text">CANCEL</string>
    <string name="ok_text">OK</string>
    <string name="tarix_text">Tarix</string>
    <string name="about_pill">Dori haqida</string>
    <string name="attention_text">Diqqat, Diqqat, Diqqat!</string>
    <string name="notification_btn_text">Tushunarli</string>
    <string name="notification_skip_btn_text">15 daqiqadan so\'ngra eslating</string>
    <string name="tavsiyanoma_text">Tavsiya</string>
    <string name="date">Sana</string>
    <string name="save">Saqlash</string>
    <string name="bo_limlar">Bo\'limlar</string>
    <string name="malumotlar">Ma\'lumotlarni to\'ldiring</string>
    <string name="login_full_error">Login ma\'lumotlari to\'liq kiritilmagan</string>
    <string name="birthday_error">Tu\'gilgan kun kiritilmagan</string>
    <string name="passport_error">Passport ma\'lumotlari to\'liq kiritilmagan</string>
    <string name="passport_error_two">Passport ma\'lumotlari notog\'ri formatda</string>
    <string name="phone_number_error">Telifon raqam to\'liq kiritilmagan</string>
    <string name="phone_number_error_two">Telifon raqam noto\'g\'ri  kiritilgan</string>
    <string name="name_error">Ism juda qisqa</string>
    <string name="success_sign_up">Muvaffaqiyatli ro\'yxatdan o\'tildi</string>
    <string name="notification_title">Dori ichish vaqti</string>
    <string name="notification_extra_title">Dorilarni ko\'rish uchun bosing</string>

    <string name="notification_tavsiya_title">Tavsiya vaqti</string>
    <string name="notification_tavsiya_extra_title">Tavsiyalarni ko\'rish uchun bosing</string>

    <string name="davolash_not_found_text">Xozircha hech qanday ma\'lumot topilmadi!</string>
    <string name="pills">Dorilar:</string>
    <string name="tavsiya_notif_title">Tavsiyalar:</string>
    <string name="pill_drink_att_text">da, siz dorilar ichishingiz kerak!</string>
    <string name="tavsiya_att_text">da, sizdagi tavsiyalar!</string>
    <string name="tabletka_tx">ta tabletka</string>
    <string name="after_meal">Ovqatdan keyin</string>
    <string name="before_meal">Ovqatdan oldin</string>
    <string name="mahal_tx">mahal</string>
    <string name="doctor">Doctorlar</string>
    <string name="ruxsat_berasizmi">Ruxsat berasizmi?</string>
    <string name="ha">Ha</string>
    <string name="yo_q">Yo\'q</string>
    <string name="bugun">Bugun</string>
    <string name="call">Operator bilan aloqa</string>
</resources>