<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.auth.SignUpFragment"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_color"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            style="@style/ButtonStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="3dp"
            android:src="@drawable/arrow_left_icon" />

        <TextView
            android:id="@+id/signUpTitle"
            style="@style/AuthTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_btn_text"
            android:textColor="@color/black" />


    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                style="@style/AuthTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_layout_bg"
                android:padding="16dp"
                android:text="@string/sign_up_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">

                <TextView
                    style="@style/AuthTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_FLM" />

                <EditText
                    android:id="@+id/signUpUsername"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/sign_up_FLM_hint"
                    android:paddingHorizontal="16dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    style="@style/AuthTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_up_birth_date_hint" />


                <TextView
                    android:id="@+id/signUpBirthDate"
                    style="@style/CalendarTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="16dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        style="@style/ErrorTextStarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/error_star" />

                    <TextView

                        style="@style/AttentionTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attention_login_text" />

                </LinearLayout>

                <TextView
                    style="@style/AuthTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_up_serial_text" />

                <EditText
                    android:id="@+id/signUpSerialNumber"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/sign_up_serial_hint"
                    android:paddingHorizontal="16dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        style="@style/ErrorTextStarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/error_star" />

                    <TextView
                        style="@style/AttentionTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attention_password_text" />

                </LinearLayout>

                <TextView
                    style="@style/AuthTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_up_region" />

                <Spinner
                    android:id="@+id/signUpRegionSpinner"
                    android:background="@drawable/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:prompt="@array/spinner_region_items"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    style="@style/AuthTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_up_job_text" />

                <EditText
                    android:id="@+id/signUpWork"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/sign_up_job_hint"
                    android:paddingHorizontal="16dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    style="@style/AuthTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_up_number_text" />

                <EditText
                    android:id="@+id/signUpPhoneNumber"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/sign_up_phone_hint"
                    android:paddingHorizontal="16dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/button_register"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/sign_up_btn_text" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>