<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.SignInFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/top_layout_bg" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/signInLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/sign_in_logo"
        app:civ_border_color="@color/white"
        app:civ_border_width="5dp" />


    <TextView
        android:id="@+id/signInTitle"
        style="@style/AuthTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signInLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="4dp"
        android:text="@string/sign_in_title"
        android:textColor="@color/secondary_text_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signInTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            style="@style/AuthTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_username_text" />

        <EditText
            android:id="@+id/signInUsername"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/sign_in_username_hint"
            android:paddingHorizontal="16dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            style="@style/AuthTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in_password_text" />

        <EditText
            android:id="@+id/signInPassword"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:drawableEnd="@drawable/outline_visibility"
            android:hint="@string/sign_in_password_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/ErrorTextStarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/error_star" />
            <TextView
                android:id="@+id/signInError"
                style="@style/EditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/sigInBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in_btn_text" />

        <Button
            android:id="@+id/sigInUpBtn"
            style="@style/SecondaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_btn_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signInSpinnerContainer"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_background"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="1dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/language_icon" />

        <Spinner
            android:id="@+id/signInLanguageSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/spinner"
            android:gravity="center_vertical"
            android:prompt="@array/spinner_items"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>


</RelativeLayout>